fixes bug 1329729 - Search field & button are misaligned on Air Mozilla website (#816)

--- a/airmozilla/main/static/main/css/autocompeter.css
+++ b/airmozilla/main/static/main/css/autocompeter.css
@@ -1,6 +1,14 @@
 /* This file is all about overrides for the autocompeter.min.css
    library. */
 
+#site-title form {
+    position: relative;
+}
+._ac-wrap {
+    position: unset;
+    display: inline;
+}
+
 ._ac-wrap ._ac-hint {
     background: none;
     color: #2D373B;
